--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,6 @@ input[type='number']:hover {
   border: 0;
   display: block;
   font-size: 16px;
-  
   padding: 10px;
   width: 80%;
   border-radius: 10px;
@@ -169,10 +168,19 @@ input[type='number']:hover {
   margin-left: 5px;
 }
 
+.am {
+  margin-left: 20px;
+}
+
+.tm {
+  margin-left: 300px;
+}
+
 .list li.plus {
   border-right: 5px solid #2ecc71;
   color: #2ecc71;
 }
+
 
 .list li.minus {
   border-right: 5px solid #c0392b;
